--- a/webshop/package.json
+++ b/webshop/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.5",
+    "angular-toastify": "^1.0.4",
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.2.0-beta1",
     "firebase": "^9.8.4",
