--- a/webshop/package.json
+++ b/webshop/package.json
@@ -26,6 +26,8 @@
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.2.0-beta1",
     "firebase": "^9.8.4",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
