--- a/webshop/package.json
+++ b/webshop/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.2.0-beta1",
     "firebase": "^9.8.4",
     "jquery": "^3.6.0",
+    "leaflet": "^1.7.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -38,6 +39,7 @@
     "@angular/compiler-cli": "^14.0.0",
     "@angular/localize": "^14.0.4",
     "@types/jasmine": "~4.0.0",
+    "@types/leaflet": "^1.7.11",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
