--- a/webshop/package.json
+++ b/webshop/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@coreui/angular": "^4.1.0",
+    "@coreui/coreui": "^4.2.0",
+    "@coreui/icons": "^2.1.0",
+    "@coreui/icons-angular": "^4.1.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
